Create FastAPI backend with WebSocket support and update web interface

--- a/web-app/index.html
+++ b/web-app/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Polyglot RAG Assistant - Multilingual Flight Search</title>
-    <script src="https://unpkg.com/livekit-client/dist/livekit-client.umd.min.js"></script>
+    <title>Flight Voice Assistant - Multilingual Search</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
