--- a/web-app/realtime.html
+++ b/web-app/realtime.html
@@ -174,6 +174,7 @@
             overflow-y: auto;
             display: flex;
             flex-direction: column;
+            scroll-behavior: smooth;
         }
 
         #user-transcript {
