--- a/web-app/realtime.html
+++ b/web-app/realtime.html
@@ -337,6 +337,9 @@
         </div>
     </div>
 
+    <script src="interruption_manager.js"></script>
+    <script src="conversation_manager.js"></script>
+    <script src="user_feedback_manager.js"></script>
     <script src="realtime-app.js"></script>
 </body>
 </html>
