--- a/web-app/livekit-client.html
+++ b/web-app/livekit-client.html
@@ -230,6 +230,31 @@
             Disconnected
         </div>
         
+        <div style="margin-bottom: 20px;">
+            <label for="languageSelect" style="display: block; margin-bottom: 8px; font-weight: 600;">Select Language:</label>
+            <select id="languageSelect" style="width: 100%; padding: 8px; border: 1px solid #dee2e6; border-radius: 5px; font-size: 14px;">
+                <option value="en" selected>English</option>
+                <option value="es">Español (Spanish)</option>
+                <option value="fr">Français (French)</option>
+                <option value="de">Deutsch (German)</option>
+                <option value="it">Italiano (Italian)</option>
+                <option value="pt">Português (Portuguese)</option>
+                <option value="zh">中文 (Chinese)</option>
+                <option value="ja">日本語 (Japanese)</option>
+                <option value="ko">한국어 (Korean)</option>
+                <option value="ar">العربية (Arabic)</option>
+                <option value="hi">हिन्दी (Hindi)</option>
+                <option value="ru">Русский (Russian)</option>
+                <option value="nl">Nederlands (Dutch)</option>
+                <option value="sv">Svenska (Swedish)</option>
+                <option value="pl">Polski (Polish)</option>
+                <option value="tr">Türkçe (Turkish)</option>
+                <option value="he">עברית (Hebrew)</option>
+                <option value="th">ไทย (Thai)</option>
+                <option value="vi">Tiếng Việt (Vietnamese)</option>
+            </select>
+        </div>
+        
         <div class="controls">
             <button id="connectBtn" onclick="connect()">Connect</button>
             <button id="disconnectBtn" onclick="disconnect()" disabled class="danger">Disconnect</button>
@@ -278,7 +303,8 @@
                         identity: `user-${Date.now()}`,
                         room: 'flight-demo',
                         metadata: JSON.stringify({
-                            agent_request: true
+                            agent_request: true,
+                            language: document.getElementById('languageSelect').value
                         })
                     })
                 });
