--- a/web-app/livekit-client.html
+++ b/web-app/livekit-client.html
@@ -294,7 +294,7 @@
             
             try {
                 // Get a token from our backend
-                const response = await fetch('/api/livekit-token', {
+                const response = await fetch('http://polyglot-rag-prod-alb-1838390148.us-east-1.elb.amazonaws.com/api/livekit/token', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
@@ -303,8 +303,11 @@
                         identity: `user-${Date.now()}`,
                         room: 'flight-demo',
                         metadata: JSON.stringify({
-                            agent_request: true,
                             language: document.getElementById('languageSelect').value
+                        }),
+                        roomMetadata: JSON.stringify({
+                            require_agent: true,
+                            agent_name: 'polyglot-flight-agent'
                         })
                     })
                 });
