--- a/web-app/livekit-client.html
+++ b/web-app/livekit-client.html
@@ -294,7 +294,7 @@
             
             try {
                 // Get a token from our backend
-                const response = await fetch('http://polyglot-rag-prod-alb-1838390148.us-east-1.elb.amazonaws.com/api/livekit/token', {
+                const response = await fetch('/api/livekit-token', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
@@ -304,10 +304,6 @@
                         room: 'flight-demo',
                         metadata: JSON.stringify({
                             language: document.getElementById('languageSelect').value
-                        }),
-                        roomMetadata: JSON.stringify({
-                            require_agent: true,
-                            agent_name: 'polyglot-flight-agent'
                         })
                     })
                 });
