feat: Implement session persistence for LiveKit agent
- Add participant session tracking with 5-minute TTL
- Implement browser-side identity persistence using localStorage
- Add multilingual welcome-back messages for returning users
- Fix async/sync event handler compatibility for livekit-agents==1.0.23
- Track reconnection count and last seen timestamp
- Pin exact LiveKit versions in requirements.txt

Browser persistence:
- Modified livekit-client.html, livekit-client-local.html, livekit-voice-chat.html
- Use localStorage to maintain consistent participant identity
- Format: user-{timestamp} persists across page refreshes

Event handler fixes:
- Convert async handlers to sync with inner async functions
- Use asyncio.create_task for async operations in sync callbacks
- Compatible with both v1.0.23 and newer LiveKit versions

Known issue: Welcome-back message logged but not spoken due to session
scope issue in event handlers. Next step: Move handler registration
after session creation.

--- a/web-app/livekit-client-local.html
+++ b/web-app/livekit-client-local.html
@@ -292,6 +292,14 @@
             connectBtn.disabled = true;
             
             try {
+                // Get or create persistent participant identity
+                let participantIdentity = localStorage.getItem('participantIdentity');
+                if (!participantIdentity) {
+                    participantIdentity = `user-${Date.now()}`;
+                    localStorage.setItem('participantIdentity', participantIdentity);
+                }
+                console.log('Using participant identity:', participantIdentity);
+                
                 // Get a token from our local backend
                 const response = await fetch(`${API_URL}/api/livekit/token`, {
                     method: 'POST',
@@ -299,7 +307,7 @@
                         'Content-Type': 'application/json'
                     },
                     body: JSON.stringify({
-                        identity: `user-${Date.now()}`,
+                        identity: participantIdentity,
                         room: 'flight-demo',
                         // Trigger agent with metadata
                         metadata: JSON.stringify({
