--- a/web-app/livekit-client.html
+++ b/web-app/livekit-client.html
@@ -294,13 +294,21 @@
             
             try {
                 // Get a token from our backend
+                // Get or create persistent participant identity
+                let participantIdentity = localStorage.getItem('participantIdentity');
+                if (!participantIdentity) {
+                    participantIdentity = `user-${Date.now()}`;
+                    localStorage.setItem('participantIdentity', participantIdentity);
+                }
+                console.log('Using participant identity:', participantIdentity);
+                
                 const response = await fetch('/api/livekit-token', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
                     },
                     body: JSON.stringify({
-                        identity: `user-${Date.now()}`,
+                        identity: participantIdentity,
                         room: 'flight-demo',
                         metadata: JSON.stringify({
                             language: document.getElementById('languageSelect').value
