--- a/polyglot-flight-agent/test-flight-ui.html
+++ b/polyglot-flight-agent/test-flight-ui.html
@@ -340,8 +340,8 @@
                 updateStatus('Connecting...', 'connecting');
                 log('Requesting connection token...', 'system');
                 
-                // Get token from local API for testing with updated agent code
-                const response = await fetch('http://localhost:8000/api/livekit/token', {
+                // Get token from ECS API directly (same endpoint Vercel proxies to)
+                const response = await fetch('http://polyglot-rag-prod-alb-1838390148.us-east-1.elb.amazonaws.com/api/livekit/token', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({
