Fix agent not joining rooms in dev environment
- Add roomMetadata to token request in test-flight-ui-dev.html
- Include require_agent: true flag to trigger agent dispatch
- Match production UI behavior for proper agent activation

--- a/polyglot-flight-agent/test-flight-ui-dev.html
+++ b/polyglot-flight-agent/test-flight-ui-dev.html
@@ -425,7 +425,11 @@
                         room: roomName,
                         identity: `test-user-${Date.now()}`,
                         name: 'Test User',
-                        metadata: JSON.stringify({ language })
+                        metadata: JSON.stringify({ language }),
+                        roomMetadata: JSON.stringify({
+                            require_agent: true,
+                            language: language
+                        })
                     })
                 });
                 
