Refactor LiveKit client connection logic and clean up UI files
- Removed unnecessary language suffix for room names in development environment to match agent's behavior.
- Updated token URL handling to differentiate between local and production environments.
- Cleaned up and deleted outdated HTML files related to LiveKit client.
- Simplified audio logging in the test UI for better clarity.

This ensures a more consistent experience across environments and improves maintainability.

--- a/polyglot-flight-agent/test-flight-ui.html
+++ b/polyglot-flight-agent/test-flight-ui.html
@@ -423,7 +423,7 @@
                             }
                         } else if (data.type === 'pre_speech_text') {
                             // Handle pre-speech text to show text before audio plays
-                            log(`[Pre-speech] ${data.text}`, 'assistant');
+                            log(data.text, 'assistant');
                             
                             // Send confirmation back if speech_id is present
                             if (data.speech_id && room.localParticipant) {
